# CG-CowWorld

./: Button.cpp  Button.h  CMakeLists.txt  Constants.h  Cow.cpp  Cow.h  CowComponent.h  CowController.cpp  CowController.h  CowHead.cpp  CowHead.h  DisplayListBuilder.h  HelpMenu.cpp  HelpMenu.h  House.cpp  House.h  Main.cpp  MainScene.cpp  MainScene.h  MenuBase.cpp  MenuBase.h  MenuManager.cpp  MenuManager.h  Menus.cpp  Menus.h  Movement.cpp  Movement.h  QuadricRenderer.h  README.md  RGBColor.h  ResourceManager.cpp  ResourceManager.h  SceneManager.cpp  SceneManager.h  SceneObject.cpp  SceneObject.h  SceneObjects.cpp  SceneObjects.h  WcPt3D.h  WcVector3D.h  (+3 more)
src/: main.cpp
src/core/: Application.cpp  Application.h  Input.cpp  Input.h  Window.cpp  Window.h
src/entities/: Cow.cpp  Cow.h  Environment.cpp  Environment.h
src/graphics/: Camera.cpp  Camera.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
src/scene/: GameObject.cpp  GameObject.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h
src/ui/: Button.cpp  Button.h  UIManager.cpp  UIManager.h
src/utils/: Math.h  ResourceManager.cpp  ResourceManager.h
